# lib/db/src/schema/index.ts
@@ -4,3 +4,4 @@ export * from "./orders";
 export * from "./orderItems";
 export * from "./inventory";
 export * from "./settings";
+export * from "./salesOrders";
